Fix timepicker z-index to overlay modal window

--- a/sass/blocks/_time-picker.sass
+++ b/sass/blocks/_time-picker.sass
@@ -18,6 +18,9 @@ $block: ".time-picker"
 
 
   @at-root
+    .rc-time-picker-panel
+      z-index: 99999
+
     // Mobile devices fix
     .rc-time-picker-panel .rc-time-picker-panel-select
       @media (pointer:coarse)
